--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">75%</i></span>
+              <span class="skill">Corel Draw <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -234,7 +234,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MERN STACK <i class="val">90%</i></span>
+              <span class="skill">fastAPI <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -295,7 +295,7 @@
               <p>An extensive course in the science of computing, a 2 year extensive study of both software and hardware and computer operations. Intense programming course.</p>
             </div>
             <div class="resume-item">
-              <h4>National Certificate in Infornation Technology</h4>
+              <h4>National Certificate in Information Technology</h4>
               <h5>2016</h5>
               <p><em>Gwanda Joshua Mqabuko Nkomo Polytech</em></p>
               <p>A generic approach to computer technology, encampacing programming with C++, computer operations, communication skills and computer packages.</p>
