--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -104,19 +104,19 @@
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Web app design</li>
+              <li><strong>Client</strong>: ZPCS</li>
+              <li><strong>Project date</strong>: 01 February, 2022</li>
+              <li><strong>Project URL</strong>: <a href="#">not available</a></li>
             </ul>
           </div>
 
         </div>
 
         <div class="portfolio-description">
-          <h2>This is an example of portfolio detail</h2>
+          <h2>Smart Prison System</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+            This is the latest project completed, it is a web application for the prison and correctional service and simple seeks to eradicate the tidious manual paper based system of registers with a more effective electronical approach. UX done with Adobe XD. The app it self is a combination of security, functionality and creativity.
           </p>
         </div>
 
@@ -129,14 +129,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>Kwandokuhle Ndethi</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://www.facebook.com/kwandokuhle.ndethi/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
